SAK-17311 JAVA_OPTS were not being passed to K2 startup; added explicit passing of now K2_OPTS. Minor optimization of svn export where possible.