@@ -17,6 +17,7 @@ export M2_HOME=/usr/local/apache-maven-2.2.1
 export PATH=$MAVEN_HOME/bin:${PATH}
 export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"
 export JAVA_OPTS="-server -Xmx1024m -XX:MaxPermSize=512m -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Dsun.lang.ClassLoader.allowArraySyntax=true -Dsakai.demo=true -Dsakai.cookieName=SAKAI2SESSIONID"
+export K2_OPTS="-server -Xmx1024m -XX:MaxPermSize=512m -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
 BUILD_DATE=`date "+%D %R"`
 
 # ensure logs directory exists
@@ -43,9 +44,9 @@ rm -rf ~/.m2/repository/
 # build sling/trunk
 # not needed as long as hudson builds are getting deployed to apache-snapshot repo
 # org.apache.sling.launchpad.base-2.0.5-SNAPSHOT-app.jar cannot be found - build sling
-echo "Building slink/trunk..."
+echo "Building sling/trunk..."
 cd $BUILD_DIR
-svn checkout -q http://svn.apache.org/repos/asf/sling/trunk sling
+svn export -q http://svn.apache.org/repos/asf/sling/trunk sling
 cd sling
 mvn clean install -Dmaven.test.skip=true
 rm -rf sling
@@ -62,7 +63,7 @@ mvn clean install -Dmaven.test.skip=true
 # start sakai 3 instance
 echo "Starting sakai3 instance..."
 cd app/target/
-java -jar org.sakaiproject.kernel.app-0.1-SNAPSHOT.jar -p 8008 -f - > $BUILD_DIR/logs/sakai3-run.log.txt 2>&1 &
+java $K2_OPTS -jar org.sakaiproject.kernel.app-0.1-SNAPSHOT.jar -p 8008 -f - > $BUILD_DIR/logs/sakai3-run.log.txt 2>&1 &
 
 # untar tomcat
 cd $BUILD_DIR
@@ -72,7 +73,7 @@ mkdir sakai2-demo/sakai
 
 # build kernel 1
 echo "Building k1/trunk..."
-svn checkout -q https://source.sakaiproject.org/svn/kernel/trunk/ kernel
+svn export -q https://source.sakaiproject.org/svn/kernel/trunk/ kernel
 cd kernel
 mvn clean install -Dmaven.test.skip=true
 cd ..
